--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -64,4 +64,9 @@ ext {
     firebaseFirestore = [
             firestore: "com.google.firebase:firebase-firestore-ktx:24.4.2"
     ]
+
+    retrofit = [
+            retrofit:  'com.squareup.retrofit2:retrofit:2.5.0',
+            gsonConverter: 'com.squareup.retrofit2:converter-gson:2.5.0'
+    ]
 }
