--- a/Features/Network/build.gradle
+++ b/Features/Network/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    namespace 'com.features'
+    namespace 'com.network'
     compileSdk 33
 
     defaultConfig {
@@ -32,7 +32,5 @@ android {
 
 dependencies {
 
-    implementation composeUIDependencies.values()
-    implementation debugDependencies.values()
-    implementation androidX.values()
+    implementation retrofit.values()
 }
