New design system

--- a/Features/DesignSystem/build.gradle
+++ b/Features/DesignSystem/build.gradle
@@ -1,11 +1,10 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
 }
 
 android {
-    namespace 'com.login'
+    namespace 'com.designsystem'
     compileSdk 33
 
     defaultConfig {
@@ -23,11 +22,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '17'
+        jvmTarget = '1.8'
     }
     buildFeatures {
         compose true
@@ -40,10 +39,5 @@ android {
 dependencies {
 
     implementation composeUIDependencies.values()
-    implementation debugDependencies.values()
-    implementation androidX.values()
-    implementation dagger.values()
-    kapt daggerCompiler.values()
-    implementation(project(":Core:Repositories"))
-    implementation(project(":Features:DesignSystem"))
+    debugImplementation debugDependencies.values()
 }
