--- a/settings.gradle
+++ b/settings.gradle
@@ -23,3 +23,4 @@ include ':Core:Interactors'
 include ':Features:Login'
 include ':Features:Authentication'
 include ':Features:Network'
+include ':Features:DesignSystem'
