--- a/settings.gradle
+++ b/settings.gradle
@@ -24,3 +24,4 @@ include ':Features:Login'
 include ':Features:Authentication'
 include ':Features:Network'
 include ':Features:DesignSystem'
+include ':Features:Maps'
