--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.INTERNET"/>
-
     <application
         android:name=".PezinhoApplication"
         android:allowBackup="true"
@@ -14,6 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Pezinho"
         tools:targetApi="31">
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyACImwqkJcfhkA-rtQFR64yoBi81jkkRm8"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
