--- a/settings.gradle
+++ b/settings.gradle
@@ -25,3 +25,4 @@ include ':Features:Authentication'
 include ':Features:Network'
 include ':Features:DesignSystem'
 include ':Features:Maps'
+include ':Features:Home'
