Location service improvements

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,9 +53,11 @@ dependencies {
     implementation dagger.values()
     kapt daggerCompiler.values()
     implementation retrofit.values()
-    implementation project(path: ':Features:Network')
+    implementation locationServices.values()
     implementation project(path: ':Core:Repositories')
     implementation project(path: ':Core')
+    implementation project(path: ':Features:Network')
+    implementation project(path: ':Features:Maps')
     implementation project(path: ':Features:Login')
     implementation project(path: ':Features:Home')
     implementation project(path: ':Features:Authentication')
