--- a/Features/Home/build.gradle
+++ b/Features/Home/build.gradle
@@ -43,9 +43,10 @@ dependencies {
     implementation debugDependencies.values()
     implementation androidX.values()
     implementation dagger.values()
+    implementation maps.values()
+    kapt daggerCompiler.values()
     implementation project(path: ':Core')
     implementation project(path: ':Core:Entities')
-    kapt daggerCompiler.values()
     implementation(project(":Core:Repositories"))
     implementation(project(":Features:DesignSystem"))
     implementation(project(":Features:Maps"))
