--- a/Features/Maps/build.gradle
+++ b/Features/Maps/build.gradle
@@ -44,7 +44,8 @@ dependencies {
     implementation androidX.values()
     implementation dagger.values()
     implementation maps.values()
+    implementation locationServices.values()
     kapt daggerCompiler.values()
-    implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation project(path: ':Core:Entities')
     implementation(project(":Features:DesignSystem"))
 }
