--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -72,6 +72,11 @@ ext {
 
     maps = [
             mapsCompose: 'com.google.maps.android:maps-compose:2.11.2',
-            servicesMaps: 'com.google.android.gms:play-services-maps:18.0.2'
+            servicesMaps: 'com.google.android.gms:play-services-maps:18.0.2',
+    ]
+
+    locationServices = [
+            locationService: 'com.google.android.gms:play-services-location:21.0.1',
+            places: 'com.google.android.libraries.places:places:3.1.0'
     ]
 }
