--- a/settings.gradle
+++ b/settings.gradle
@@ -26,3 +26,4 @@ include ':Features:Network'
 include ':Features:DesignSystem'
 include ':Features:Maps'
 include ':Features:Home'
+include ':Features:Database'
