Setting auto completion

--- a/Features/Network/build.gradle
+++ b/Features/Network/build.gradle
@@ -33,4 +33,6 @@ android {
 dependencies {
 
     implementation retrofit.values()
+    implementation project(path: ':Core:Entities')
+    implementation project(path: ':Core:Repositories')
 }
