--- a/Features/SplashScreen/build.gradle
+++ b/Features/SplashScreen/build.gradle
@@ -4,12 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.features'
+    namespace 'com.splashscreen'
     compileSdk 33
 
     defaultConfig {
         minSdk 24
-        targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -28,8 +27,15 @@ android {
     kotlinOptions {
         jvmTarget = '17'
     }
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.4.3'
+    }
 }
 
 dependencies {
+    implementation "com.airbnb.android:lottie-compose:6.0.1"
 
 }
