--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,13 +50,19 @@ android {
 }
 
 dependencies {
-    implementation composeUIDependencies.values()
-    implementation dagger.values()
+    implementation ComposeDependencies.preview
+    implementation ComposeDependencies.activity
+    implementation ComposeDependencies.composeUI
+    implementation ComposeDependencies.lifecycleCompose
+    implementation ComposeDependencies.navigationCompose
+    implementation ComposeDependencies.material
+    implementation RetrofitDependencies.retrofit
+    implementation FirebaseDependencies.bom
+    implementation FirebaseDependencies.firestore
+    implementation DaggerDependencies.dagger
+    implementation DaggerDependencies.hiltNavigation
+    kapt DaggerDependencies.kaptCompiler
     implementation project(path: ':Features:Database')
-    kapt daggerCompiler.values()
-    implementation retrofit.values()
-    implementation platform('com.google.firebase:firebase-bom:32.1.0')
-    implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation project(path: ':Core:Repositories')
     implementation project(path: ':Core')
     implementation project(path: ':Features:Network')
