--- a/Features/SplashScreen/build.gradle
+++ b/Features/SplashScreen/build.gradle
@@ -36,6 +36,6 @@ android {
 }
 
 dependencies {
-    implementation "com.airbnb.android:lottie-compose:6.0.1"
 
+    implementation OtherDependencies.lottie
 }
