--- a/settings.gradle
+++ b/settings.gradle
@@ -27,4 +27,4 @@ include ':Features:DesignSystem'
 include ':Features:Maps'
 include ':Features:Home'
 include ':Features:Database'
-include ':Features:SplashScreen'
+include ':Features:Entry'
