--- a/Features/Entry/build.gradle
+++ b/Features/Entry/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -38,4 +39,15 @@ android {
 dependencies {
 
     implementation OtherDependencies.lottie
+    implementation ComposeDependencies.composeUI
+    implementation ComposeDependencies.material
+    implementation ComposeDependencies.preview
+    implementation ComposeDependencies.lifecycleCompose
+    implementation DaggerDependencies.hiltNavigation
+    implementation DaggerDependencies.dagger
+    kapt DaggerDependencies.kaptCompiler
+    implementation project(path: ':Core')
+    implementation project(path: ':Core:Entities')
+    implementation project(path: ':Features:DesignSystem')
+
 }
