--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,12 +62,13 @@ dependencies {
     implementation DaggerDependencies.dagger
     implementation DaggerDependencies.hiltNavigation
     kapt DaggerDependencies.kaptCompiler
-    implementation project(path: ':Features:Database')
-    implementation project(path: ':Core:Repositories')
     implementation project(path: ':Core')
+    implementation project(path: ':Core:Repositories')
+    implementation project(path: ':Features:Database')
     implementation project(path: ':Features:Network')
     implementation project(path: ':Features:Maps')
     implementation project(path: ':Features:Login')
+    implementation project(path: ':Features:Entry')
     implementation project(path: ':Features:Home')
     implementation project(path: ':Features:Authentication')
     implementation project(path: ':Features:DesignSystem')
