Updating bottom bar

--- a/Features/DesignSystem/build.gradle
+++ b/Features/DesignSystem/build.gradle
@@ -40,5 +40,7 @@ dependencies {
     implementation ComposeDependencies.material
     implementation ComposeDependencies.preview
     implementation ComposeDependencies.composeUI
+    debugImplementation DebugDependencies.uiTooling
+    debugImplementation DebugDependencies.uiTestManifest
     implementation OtherDependencies.lottie
 }
