--- a/settings.gradle
+++ b/settings.gradle
@@ -28,3 +28,4 @@ include ':Features:Maps'
 include ':Features:Home'
 include ':Features:Database'
 include ':Features:Entry'
+include ':Features:Navigation'
