--- a/Features/Home/build.gradle
+++ b/Features/Home/build.gradle
@@ -6,11 +6,11 @@ plugins {
 
 android {
     namespace 'com.home'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         minSdk 24
-        targetSdk 33
+        targetSdk 34
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -46,6 +46,7 @@ dependencies {
     implementation ComposeDependencies.constraintLayout
     implementation DaggerDependencies.dagger
     implementation DaggerDependencies.hiltNavigation
+    implementation OtherDependencies.coil
     kapt DaggerDependencies.kaptCompiler
     implementation project(path: ':Core')
     implementation project(path: ':Core:Entities')
